cors config update